# PS3EYEDriver

./: .gitignore  README.md  README.msvc
VC2013/: .gitignore  PS3EyeDriver.sln  README.msvc
VC2013/PS3EyeDriverLib/: PS3EyeDriverLib.vcxproj  PS3EyeDriverLib.vcxproj.filters
VC2013/SDLExample/: SDLExample.vcxproj  SDLExample.vcxproj.filters
cinder/: PS3EYECaptureApp.cpp
framework/: CMakeLists.txt  README.md  audio.cpp  chibi.txt  main.cpp  video.cpp
libusb/vc10/: libusb-1.0.lib
openframeworks/: testApp.cpp  testApp.h
sdl/: README.mingw  README.mingw64  main.cpp  makefile  yuv422rgba.h
sdl/include/SDL2/: SDL_config.h
src/: ps3eye.cpp  ps3eye.h  ps3eye_capi.cpp  ps3eye_capi.h  ps3eye_driver.c  ps3eye_driver.h  ps3eyedriver.cpp  ps3eyedriver.h  ps3mic.cpp  ps3mic.h
